--- a/client/src/assets/styles/index.scss
+++ b/client/src/assets/styles/index.scss
@@ -11,18 +11,17 @@
 }
 
 html {
-    width: 100svw;
-    height: 100svh;
+    // width: 100svw;
+    // height: 100svh;
 }
 
 body {
-    width: 100%;
-    height: 100%;
-    // background: linear-gradient(135deg, #ffa351, #ffdd67);
+    // width: 100%;
+    // height: 100%;
 }
 
 #root {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+    // position: relative;
+    // top: 50%;
+    // transform: translateY(-50%);
 }
